--- a/prohistonedb/static/assets/scss/material-kit/custom/_styles.scss
+++ b/prohistonedb/static/assets/scss/material-kit/custom/_styles.scss
@@ -121,6 +121,7 @@ h3 {
         content: "\e5cf";
         font-family: "Material Icons Round";
         font-size: $font-size-lg;
+        line-height: $font-size-lg;
         margin-left: 0;
         border: 0;
         /* fix index page search box dropdown vertical alignment issue */
@@ -163,6 +164,11 @@ h3 {
     border-top-right-radius: 0 !important;
     border-bottom-right-radius: 0 !important;
 }
+/* align search icon (submit button) */
+form[name=search] .input-group-text {
+    padding-top: .5em;
+}
+
 
 /* change radio buttons to solid cicles */
 .form-check:not(.form-switch) .form-check-input[type=radio]:checked {
@@ -173,11 +179,6 @@ h3 {
     font-size: $font-size-xs;
 }
 
-form[name="search"] .arrow {
-    z-index: 9;
-    margin-left: -1.2rem !important;
-}
-select.dropdown-toggle { text-align: left }
 
 .nav-pills .nav-link
 .nav-pills .nav-link.active { 
